dc-intermediary/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: babelfish
spec:
  replicas: 1
  selector:
    matchLabels:
      app: babelfish
  template:
    metadata:
      labels:
        app: babelfish
    spec:
      containers:
      - name: babelfish
        image: oydeu/dc-babelfish:latest
        ports:
        - containerPort: 3000
