dc-intermediary/kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: babelfish
spec:
  selector:
    app: babelfish
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
