dc-intermediary/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: babelfish
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - babelfish.data-container.net
    secretName: babelfish-tls
  rules:
  - host: babelfish.data-container.net
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: babelfish
            port:
              number: 80
